target/kubernetes/knative.yml
---
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2022-04-30 - 03:41:40 +0000
  labels:
    app.kubernetes.io/name: quarkus-opentelmetry
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: quarkus-opentelmetry
spec:
  template:
    metadata:
      labels:
        app.kubernetes.io/name: quarkus-opentelmetry
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containerConcurrency: 0
      containers:
        - command:
            - java
            - -Dquarkus.http.host=0.0.0.0
            - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
            - -jar
            - /deployments/quarkus-run.jar
          env:
            - name: JAVA_APP_JAR
              value: /deployments/quarkus-run.jar
          image: image-registry.openshift-image-registry.svc:5000/quarkus-opentelemetry/quarkus-opentelmetry:1.0.0-SNAPSHOT
          name: quarkus-opentelmetry
          ports:
            - containerPort: 8080
              name: http1
              protocol: TCP
