target/kubernetes/kubernetes.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: 1a6a18dcb2b0bafe8aea537a1f54a72b2b2bb617
    app.quarkus.io/build-timestamp: 2022-12-06 - 20:54:25 +0000
  labels:
    app.kubernetes.io/name: myservice
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: myservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: myservice
      app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: 1a6a18dcb2b0bafe8aea537a1f54a72b2b2bb617
        app.quarkus.io/build-timestamp: 2022-12-06 - 20:54:25 +0000
      labels:
        app.kubernetes.io/name: myservice
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: danieloh/myservice:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: myservice
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: 1a6a18dcb2b0bafe8aea537a1f54a72b2b2bb617
    app.quarkus.io/build-timestamp: 2022-12-06 - 20:54:25 +0000
  labels:
    app.kubernetes.io/name: myservice
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  name: myservice
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: myservice
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
