target/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 5e02534c7abafda424c6fe491fb7e78f60bc89b1
    app.quarkus.io/build-timestamp: 2022-09-05 - 02:54:40 +0000
  labels:
    app.kubernetes.io/name: otel-knative-java
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: otel-knative-java
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: otel-knative-java
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 5e02534c7abafda424c6fe491fb7e78f60bc89b1
    app.quarkus.io/build-timestamp: 2022-09-05 - 02:54:40 +0000
  labels:
    app.kubernetes.io/name: otel-knative-java
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: otel-knative-java
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: otel-knative-java
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: <<unknown>>
        app.quarkus.io/commit-id: 5e02534c7abafda424c6fe491fb7e78f60bc89b1
        app.quarkus.io/build-timestamp: 2022-09-05 - 02:54:40 +0000
      labels:
        app.kubernetes.io/name: otel-knative-java
        app.kubernetes.io/version: 1.0.0-SNAPSHOT
        app.openshift.io/runtime: quarkus
    spec:
      containers:
        - command:
            - java
            - -jar
            - /deployments/quarkus-run.jar
          image: image-registry.openshift-image-registry.svc:5000/otel-knative-java/otel-knative-java:1.0.0-SNAPSHOT
          imagePullPolicy: Always
          name: otel-knative-java
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - otel-knative-java
        from:
          kind: ImageStreamTag
          name: otel-knative-java:1.0.0-SNAPSHOT
      type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: <<unknown>>
    app.quarkus.io/commit-id: 5e02534c7abafda424c6fe491fb7e78f60bc89b1
    app.quarkus.io/build-timestamp: 2022-09-05 - 02:54:40 +0000
  labels:
    app.kubernetes.io/name: otel-knative-java
    app.kubernetes.io/version: 1.0.0-SNAPSHOT
    app.openshift.io/runtime: quarkus
  name: otel-knative-java
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: otel-knative-java
